Implemented the review comments