@@ -67,7 +67,6 @@ public class SimpleHttpServer {
         executor = Executors.newCachedThreadPool();
         httpServer.setExecutor(executor);
         httpServer.start();
-
         address = "http:"+URIBuilder.newBuilder().host(httpServer.getAddress().getAddress()).
                 port(httpServer.getAddress().getPort()).build().toString();
     }
@@ -87,9 +86,11 @@ public class SimpleHttpServer {
 
     class MyHttpHandler implements HttpHandler {
 
+        private final URI rootUri;
         private final String docRoot;
 
         MyHttpHandler(final String docroot) {
+            rootUri = Path.of(docroot).toUri().normalize();
             docRoot = docroot;
         }
 
@@ -99,11 +100,21 @@ public class SimpleHttpServer {
                 Headers rMap = t.getResponseHeaders();
                 try (OutputStream os = t.getResponseBody()) {
                     URI uri = t.getRequestURI();
-                    String path = uri.getPath();
+                    String path = uri.getRawPath();
+                    System.out.println("SNEHA PATH:"+uri.getPath());
+                    System.out.println("SNEHA RAW PATH:"+path);
+                    assert path.isEmpty() || path.startsWith("/");
                     Path fPath;
                     try {
-                        fPath = Paths.get(docRoot, path);
+                        System.out.println("SNEHA ROOT PATH DOC ROOT:"+rootUri.getRawPath());
+                        System.out.println("SNEHA PATH:"+rootUri.getPath());
+                        System.out.println("OLD PATH"+Paths.get(docRoot, path));
+                        uri = URI.create(rootUri.getRawPath()+ path).normalize();
+                        System.out.println("FINAL URI:"+uri.getRawPath());
+                        fPath = Path.of(uri);
+                        System.out.println("NEW PATH:"+fPath);
                     } catch (InvalidPathException ex) {
+                        System.out.println("GOT EXCEPTION");
                         notfound(t, path);
                         return;
                     }
